Fix multiple layout issues

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -28,7 +28,7 @@
   // -----------------------------
 
   // Replace with corresponding template values
-  @container-width: 960px;
+  @container-width: 100%;
 
   @spacing__first--desktop: 40px;
   @spacing__first--tablet:  30px;
@@ -44,7 +44,17 @@
     margin-left: auto;
     margin-right: auto;
     max-width: @container-width;
-    width: 90%;
+    width: 100%;
+  }
+
+  .style--light, .style--dark, .style--accent, .style--background-image {
+    .row__container {
+      width: 90% !important;
+    }
+  }
+
+  .container {
+    height: auto;
   }
 
   // Move spacing to first widget in the main zone (not sections)
